--- a/pynsight_GDedit/pynsight.ui
+++ b/pynsight_GDedit/pynsight.ui
@@ -428,6 +428,13 @@
            </widget>
           </item>
           <item row="2" column="0">
+           <widget class="QPushButton" name="savetracksCSV_button">
+            <property name="text">
+             <string>Save tracks as CSV</string>
+            </property>
+           </widget>
+          </item>          
+          <item row="3" column="0">
            <widget class="QPushButton" name="loadtracksjson_button">
             <property name="text">
              <string>Load json tracks</string>
